--- a/src/test/resources/jndi.properties
+++ b/src/test/resources/jndi.properties
@@ -9,7 +9,7 @@ java.naming.provider.url = vm://localhost
 
 # register some queues in JNDI using the form
 # queue.[jndiName] = [physicalName]
+queue.Bets = Bets
 
 # register some topics in JNDI using the form
 # topic.[jndiName] = [physicalName]
-topic.Bets = Bets
