--- a/src/test/resources/jndi.properties
+++ b/src/test/resources/jndi.properties
@@ -12,4 +12,4 @@ java.naming.provider.url = vm://localhost
 queue.Bets = Bets
 
 # register some topics in JNDI using the form
-# topic.[jndiName] = [physicalName]
+# betQueue.[jndiName] = [physicalName]
