--- a/src/test/resources/jndi.properties
+++ b/src/test/resources/jndi.properties
@@ -12,4 +12,5 @@ java.naming.provider.url = vm://localhost
 queue.Bets = Bets
 
 # register some topics in JNDI using the form
-# betQueue.[jndiName] = [physicalName]
+# topic.[jndiName] = [physicalName]
+topic.AcceptedBets = AcceptedBets
