--- a/src/test/resources/jndi.properties
+++ b/src/test/resources/jndi.properties
@@ -5,7 +5,7 @@ java.naming.provider.url = vm://localhost
 
 # use the following property to specify the JNDI name the connection factory
 # should appear as.
-#connectionFactoryNames = connectionFactory, queueConnectionFactory, topicConnectionFactry
+connectionFactoryNames = connectionFactory, queueConnectionFactory, topicConnectionFactory
 
 # register some queues in JNDI using the form
 # queue.[jndiName] = [physicalName]
