--- a/src/test/resources/jndi.properties
+++ b/src/test/resources/jndi.properties
@@ -2,13 +2,15 @@ java.naming.factory.initial = org.apache.activemq.jndi.ActiveMQInitialContextFac
 
 # use the following property to configure the default connector
 java.naming.provider.url = vm://localhost
+#service:jmx:rmi:///jndi/rmi://localhost:1099/jmxrmi
+
 
 # use the following property to specify the JNDI name the connection factory
 # should appear as.
 connectionFactoryNames = connectionFactory, queueConnectionFactory, topicConnectionFactory
 
 # register some queues in JNDI using the form
-# queue.[jndiName] = [physicalName]
+# destination.[jndiName] = [physicalName]
 queue.Bets = Bets
 
 # register some topics in JNDI using the form
